// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.kyuubi.grpc";

enum StatusCode {
  OK = 0;
  ERROR = 1;
}

message Status {
  StatusCode status_code = 1;
  string sql_state = 2;
  // for legacy jdbc engines
  uint32 error_code = 3;
  string error_message = 4;
}

message SQLWarning {
  // a description of the warning
  string reason = 1;
  // an XOPEN or SQL:2003 code identifying the warning
  string sql_state = 2;
  // a database vendor-specific warning code
  uint32 vendor_code = 3;
  SQLWarning next_warning = 4;
}